small changes to libg